# bactery-flow

./: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  conanfile.py
.github/scripts/: conan-ci-setup.sh
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: bacterium.cpp  bacterium.hpp  field.cpp  field.hpp  food.cpp  food.hpp  lmath.cpp  lmath.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  network.cpp  network.hpp  nparam.hpp  ptransform.cpp  ptransform.hpp  selection.cpp  selection.hpp  simulation.cpp  simulation.hpp
test/: CMakeLists.txt
test/source/: bactery-flow_test.cpp
